[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "edunexora-openenv"
version = "0.1.0"
description = "AI RL Env for Student Analytics"
dependencies = [
    "flask",
    "pydantic",
    "openenv-core>=0.2.0",
    "fastapi",
    "uvicorn"
]

[project.scripts]
server = "server.app:main"
